# go-print-farm

./: .bazelrc  BUILD  README.md  WORKSPACE  docker-compose.yml  start_minio.sh
.github/workflows/: pull_request.yaml
lib/kafka/: BUILD.bazel  go.mod  kafka.go
lib/printer_helper/: BUILD.bazel  printer_helper.go
lib/printers/octopi/: BUILD.bazel  octopi.go
lib/tracing/: BUILD.bazel  tracing.go
src/api/: BUILD  deps.bzl  go.mod  kafka_connector.go  kafka_messages.go  kafka_messages_test.go  main.go  print_request.go  s3.go  watchdog.go
src/heartbeat/: BUILD  base_printer.go  go.mod  heartbeat.go  main.go  octopi_printer.go  octopi_printer_test.go  poll.go  printer.go
src/printer-status/: BUILD  main.go
src/protobufs/: BUILD  Files.proto  Heartbeat.proto  Print.proto  Printer.proto
src/shepherd/: BUILD  go.mod  go.sum  main.go  print_type.go  printer_type.go
src/usher/: BUILD.bazel  go.mod  main.go  s3.go
src/web-server/: BUILD
